// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser unary expressions parses consecutive unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 27,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": 7,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": false,
          "kind": 7,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "-",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": false,
            "kind": 7,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "-",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": false,
              "kind": 7,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "-",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": false,
                "kind": 7,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "-",
              },
              "right": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": Int32 {
                  "kind": 3,
                  "value": 5,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses consecutive unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 27,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": 75,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": true,
          "kind": 75,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "not",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": true,
            "kind": 75,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "not",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": true,
              "kind": 75,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "not",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": true,
                "kind": 75,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "not",
              },
              "right": Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 27,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": 7,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "kind": 3,
          "value": 5,
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 27,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": 75,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Literal {
        "_location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
    },
  },
]
`;
